<resources>
    <string name="app_name">Time Killer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="eval_activity">EvalActivity</string>
    <string name="task_list">TaskList</string>

    <string name="drawerIcon">Drawer Icon</string>

    <string name="dataInput">Data input</string>
    <string name="evaluation">Evaluation</string>

    <string name="testString">Time Killer</string>
</resources>
